syntax = "proto3";

package messages;

service MessagesService {
    rpc GetUnreadCount(GetUnreadCountRequest) returns (GetUnreadCountResponse);
}

message GetUnreadCountRequest {
    string channelId = 1;
    string lastReadId = 2;
}

message GetUnreadCountResponse {
    int32 status = 1;
    int32 data = 2;
}